# payrollapp

./: .gitignore  .taurignore  LICENSE  README.md  biweekly_Married.xml  biweekly_Single.xml  index.html  package.json  tauri_update_work_instructions.md  vite.config.js
.github/workflows/: rust.yml
src/: about.js  employees.js  home.js  index.html  main.js  navigation.js  payroll.js  pub15.js  reports.js  style.css  stylebup.css  styles.css
src-tauri/: Cargo.toml  private.key  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/logs/: pharmacy.log.2025-05-08  pharmacy.log.2025-05-12  pharmacy.log.2025-05-13  pharmacy.log.2025-05-14
src-tauri/src/: db.rs  employee.rs  import.rs  lib.rs  main.rs  payroll.rs  updates.rs
src/js/: about.js  employees.js  home.js  main.js  navigation.js  pages.js  payroll.js  reports.js
src/js/pages/: about.js  employees.js  home.js  payroll.js  pub15.js  reports.js
src/pages/: about.js  employees.js  home.js  payroll.js  pub15.js  reports.js
