[package]
name = "payroll"
version = "0.1.1"
description = "Payroll App for Medical Arts Pharmacy"
authors = ["Ryan Shave"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[package.metadata.tauri.config]
file = "src-tauri/tauri.config.json"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dev-dependencies]
tempfile = "3.8.1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32.0", features = ["bundled", "backup"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
semver = "1.0"
self_update = { version = "0.42", features = ["archive-zip"] }
dotenvy = "0.15"
quick-xml = "0.37"
tauri-plugin-dialog = "2"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
